--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Project in action - ...",
   "main": "server.js",
   "scripts": {
-    "start": "tsc server.ts && node server.js",
-    "build": "tsc",
-    "server": "nodemon server.ts"
+    "client-install": "cd client && npm install",
+    "start": "node dist/server.js",
+    "server": "nodemon server.ts",
+    "client": "cd client && npm run start",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "postinstall": "tsc"
   },
   "repository": {
     "type": "git",
@@ -27,7 +30,9 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -37,7 +42,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
-    "tsc": "^2.0.4",
     "validator": "^13.7.0"
   }
 }
