added a lot of features for FE and BE

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -22,5 +22,10 @@
   },
   "include": [
     "src"
-  ]
+, "../constants/send-email.ts"  ],
+  "paths": {
+    "path": [
+      "./node_modules/path-browserify"
+    ]
+  }
 }
