--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@types/react-transition-group": "^4.4.4",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "nodemailer": "^6.7.3",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.2",
@@ -46,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "i18next": "^21.6.14",
+    "react-i18n": "^1.0.1",
+    "react-i18next": "^11.16.2"
   }
 }
