--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
@@ -42,6 +43,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "nodemailer": "^6.7.3",
+    "path-browserify": "^1.0.1",
     "validator": "^13.7.0"
   }
 }
