--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,16 @@
     "nodemailer": "^6.7.3",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
+    "react-tsparticles": "^1.42.4",
     "sass": "^1.49.9",
+    "tsparticles": "^1.42.4",
+    "tsparticles-preset-confetti": "^1.42.4",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
