--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Project in action - ...",
   "main": "server.js",
+  "engines": {
+    "node": "14.x",
+    "npm": "6.14.7"
+  },
   "scripts": {
     "start": "node dist/server.js",
     "server": "nodemon server.ts",
