--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "npm": "6.14.7"
   },
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node server.js",
     "server": "nodemon server.ts",
     "postinstall": "tsc"
   },
