--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -19,11 +20,14 @@
     "react": "^17.0.2",
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
     "react-tsparticles": "^1.42.4",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
     "sass": "^1.49.9",
     "tsparticles": "^1.42.4",
     "tsparticles-preset-confetti": "^1.42.4",
@@ -55,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
     "i18next": "^21.6.14",
     "react-i18n": "^1.0.1",
     "react-i18next": "^11.16.2"
